[gd_scene load_steps=16 format=3 uid="uid://cmg6aoovnep43"]

[ext_resource type="Script" uid="uid://43lpoalbkvdh" path="res://Scenes/MainScenes/scene_handler.gd" id="1_53min"]
[ext_resource type="PackedScene" uid="uid://dyxvg21scor2q" path="res://Scenes/Maps/map_1.tscn" id="2_qjdn2"]
[ext_resource type="PackedScene" uid="uid://cyco7e3aw7t1b" path="res://Scenes/UIScenes/build_manager.tscn" id="3_1lbnm"]
[ext_resource type="PackedScene" uid="uid://df64h7kxlj1qe" path="res://Scenes/SupportScenes/highlight_tile.tscn" id="3_cidb5"]
[ext_resource type="PackedScene" uid="uid://du260xt4sdyqw" path="res://Scenes/MainScenes/path_finding_manager.tscn" id="4_7de6e"]
[ext_resource type="PackedScene" uid="uid://bh5uv5ek2gchr" path="res://Scenes/MainScenes/Enemy.tscn" id="5_p4hv5"]
[ext_resource type="PackedScene" uid="uid://kai2sftuw5vi" path="res://Scenes/UIScenes/wave_manager.tscn" id="6_rp770"]
[ext_resource type="PackedScene" uid="uid://khx3tuurjhea" path="res://Scenes/SupportScenes/enemy_spawner.tscn" id="7_a6qyh"]
[ext_resource type="Script" uid="uid://bamilx6sa3boo" path="res://Scenes/SupportScenes/wave_manager.gd" id="8_6b8lh"]
[ext_resource type="PackedScene" uid="uid://cvt2hqkv0iet0" path="res://Scenes/SupportScenes/tower_placer_manager.tscn" id="10_6b8lh"]
[ext_resource type="PackedScene" uid="uid://dg6xset0g8tu6" path="res://Scenes/UIScenes/towerselect.tscn" id="10_53min"]
[ext_resource type="PackedScene" uid="uid://cng55yelilh2x" path="res://Scenes/UIScenes/hint_manager.tscn" id="12_mj12j"]
[ext_resource type="Script" uid="uid://dnvosubd4o4qo" path="res://Scenes/UIScenes/hint_manager.gd" id="13_oce7s"]
[ext_resource type="PackedScene" uid="uid://csd468qt0aeqs" path="res://Scenes/SupportScenes/tutorial_manager.tscn" id="14_6msxg"]
[ext_resource type="Script" uid="uid://dnylrwb8ngoh7" path="res://Scenes/SupportScenes/tutorial_manager.gd" id="15_fcasn"]

[node name="GameHandler" type="Node" node_paths=PackedStringArray("tower_placer_manager", "highlight_tile", "building_manager", "wave_manager")]
script = ExtResource("1_53min")
tower_placer_manager = NodePath("Gameplay UI/TowerPlacerManager")
highlight_tile = NodePath("HighlightTile")
building_manager = NodePath("BuildManager")
wave_manager = NodePath("WaveManager")

[node name="BuildManager" parent="." node_paths=PackedStringArray("tile_map_layer") instance=ExtResource("3_1lbnm")]
tile_map_layer = NodePath("../Foreground")

[node name="PathFindingManager" parent="." node_paths=PackedStringArray("tile_map_grid") instance=ExtResource("4_7de6e")]
tile_map_grid = NodePath("../Foreground")
p = ExtResource("5_p4hv5")

[node name="Foreground" parent="." instance=ExtResource("2_qjdn2")]

[node name="HighlightTile" parent="." instance=ExtResource("3_cidb5")]

[node name="WaveManager" parent="." node_paths=PackedStringArray("enemy_spawner") instance=ExtResource("6_rp770")]
script = ExtResource("8_6b8lh")
enemy_spawner = NodePath("Enemy Spawner")

[node name="Enemy Spawner" parent="WaveManager" instance=ExtResource("7_a6qyh")]
enemy_scene = ExtResource("5_p4hv5")

[node name="Enemies" type="Node2D" parent="."]
position = Vector2(350, 34.075)

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(350, 34.075)

[node name="StarTracker" type="Marker2D" parent="."]
position = Vector2(353, 49)

[node name="Gameplay UI" parent="." instance=ExtResource("10_53min")]

[node name="TowerPlacerManager" parent="Gameplay UI" groups=["TOWER_GROUP"] instance=ExtResource("10_6b8lh")]

[node name="HintManager" parent="." instance=ExtResource("12_mj12j")]
script = ExtResource("13_oce7s")

[node name="HintLabel" type="Label" parent="HintManager"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="TutorialManager" parent="." instance=ExtResource("14_6msxg")]
script = ExtResource("15_fcasn")
